<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Messaging</string>
    <string name="share_intent_label">Messaging</string>
    <string name="share_intent_activity_label">Select conversation</string>
    <string name="action_settings">Settings</string>
    <string name="sendButtonContentDescription">Send Message</string>
    <string name="attachMediaButtonContentDescription">Add an attachment</string>
    <string name="help_and_feedback_activity_label">Help</string>
    <string name="welcome">Welcome</string>
    <string name="skip">Skip</string>
    <string name="next_with_arrow">Next &gt;</string>
    <string name="next">Next</string>
    <string name="exit">Exit</string>
    <string name="settings_with_arrow">Settings &gt;</string>
    <string name="settings">Settings</string>
    <string name="required_permissions_promo">Messaging needs permission to SMS, Phone and Contacts.</string>
    <string name="enable_permission_procedure">You can change permissions in Settings > Apps > Messaging > Permissions.</string>
    <string name="enable_permission_procedure_description">You can change permissions in Settings, Apps, Messaging, Permissions.</string>
    <string name="contact_picker_frequents_tab_title">Frequents</string>
    <string name="contact_picker_all_contacts_tab_title">All contacts</string>
    <string name="contact_list_send_to_text">Send to <xliff:g id="destination">%s</xliff:g></string>
    <string name="mediapicker_cameraChooserDescription">Capture pictures or video</string>
    <string name="mediapicker_galleryChooserDescription">Choose images from this device</string>
    <string name="mediapicker_audioChooserDescription">Record audio</string>
    <string name="mediapicker_gallery_title">Choose photo</string>
    <string name="mediapicker_gallery_item_selected_content_description">The media is selected.</string>
    <string name="mediapicker_gallery_item_unselected_content_description">The media is unselected.</string>
    <string name="mediapicker_gallery_title_selection"><xliff:g id="count">%d</xliff:g> selected</string>
    <string name="mediapicker_gallery_image_item_description">image <xliff:g id="date">%1$tB %1$te %1$tY %1$tl %1$tM %1$tp</xliff:g></string>
    <string name="mediapicker_gallery_image_item_description_no_date">image</string>
    <string name="mediapicker_audio_title">Record audio</string>
    <string name="action_share">Share</string>
    <string name="posted_just_now">"Just now"</string>
    <string name="posted_now">"Now"</string>
    <plurals name="num_minutes_ago">
        <item quantity="one"><xliff:g id="count">%d</xliff:g> min</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> mins</item>
    </plurals>
    <plurals name="num_hours_ago">
        <item quantity="one"><xliff:g id="count">%d</xliff:g> hour</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> hours</item>
    </plurals>
    <plurals name="num_days_ago">
        <item quantity="one"><xliff:g id="count">%d</xliff:g> day</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> days</item>
    </plurals>
    <plurals name="week_count">
        
        <item quantity="one">a week</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> weeks</item>
    </plurals>
    <plurals name="month_count">
        
        <item quantity="one">a month</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> months</item>
    </plurals>
    <plurals name="year_count">
        
        <item quantity="one">a year</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> years</item>
    </plurals>
    <string name="class_0_message_activity">Class 0 message</string>
    <string name="save">Save</string>
    <string name="sms_storage_low_auto_delete_enabled_dialog_text">Device is low on space. Messaging will automatically delete older messages to free up space.</string>
    <string name="sms_storage_low_title">Storage space running out</string>
    <string name="sms_storage_low_text">Messaging might not send or receive messages until more space is available on your device.</string>
    <string name="sms_storage_low_notification_ticker">Low SMS storage. You may need to delete messages.</string>
    <string name="enter_phone_number_title">Confirm your phone number</string>
    <string name="enter_phone_number_text">This one-time step will ensure Messaging will deliver your group messages properly.</string>
    <string name="enter_phone_number_hint">Phone number</string>
    <string name="delete_all_media">Delete all messages with media</string>
    <string name="delete_oldest_messages">Delete messages older than <xliff:g id="duration">%s</xliff:g></string>
    <string name="auto_delete_oldest_messages">Auto-delete messages older than <xliff:g id="duration">%s</xliff:g></string>
    <string name="ignore">Ignore</string>
    <string name="delete_all_media_confirmation">Delete all messages with media?</string>
    <string name="delete_oldest_messages_confirmation">Delete messages older than <xliff:g id="duration">%s</xliff:g>?</string>
    <string name="auto_delete_oldest_messages_confirmation">Delete messages older than <xliff:g id="duration">%s</xliff:g> and turn on auto-delete?</string>
    <string name="incoming_text_sender_content_description"><xliff:g id="sender">%s</xliff:g> said</string>
    <string name="outgoing_text_sender_content_description">You said</string>
    <string name="incoming_sender_content_description">Message from <xliff:g id="sender">%s</xliff:g></string>
    <string name="outgoing_sender_content_description">You sent a message</string>
    <string name="message_status_sending">Sending&#8230;</string>
    <string name="message_status_send_failed">Not sent. Tap to try again.</string>
    <string name="message_status_send_retrying">Not sent. Trying again&#8230;</string>
    <string name="message_status_resend">Resend or delete</string>
    <string name="message_status_send_failed_emergency_number">Please make a voice call to emergency services. Your text message could not be delivered at this time.</string>
    <string name="message_status_failed">Failed</string>
    <string name="message_title_manual_download">New MMS message to download</string>
    <string name="message_title_downloading">New MMS message</string>
    <string name="message_title_download_failed">Couldn\'t download</string>
    <string name="message_status_download_failed">Tap to try again</string>
    <string name="message_status_download">Tap to download</string>
    <string name="message_status_download_action">Download or delete</string>
    <string name="message_status_downloading">Downloading&#8230;</string>
    <string name="message_status_download_error">Message expired or not available</string>
    <string name="mms_info">size: <xliff:g id="messageSize">%1$s</xliff:g>, expiration: <xliff:g id="messageExpire">%2$s</xliff:g></string>
    <string name="invalid_destination">Can\'t send. Recipient not valid.</string>
    <string name="service_not_activated">Service not activated on network</string>
    <string name="service_network_problem">Couldn\'t send due to network problem</string>
    <string name="service_message_not_found">Message expired or not available</string>
    <string name="no_subject">(No subject)</string>
    <string name="unknown_sender">Unknown sender</string>
    <string name="delivered_status_content_description">Delivered</string>
    <string name="dl_failure_notification">Couldn\'t download message <xliff:g id="subject">%1$s</xliff:g> from <xliff:g id="from">%2$s</xliff:g>.</string>
    <string name="low_memory">Couldn\'t complete database operation due to low memory</string>
    <string name="notification_send_failures_line1_singular">Message not sent</string>
    <string name="notification_send_failures_line1_plural">Some messages not sent in Messaging</string>
    <plurals name="notification_send_failures">
        <item quantity="one"><xliff:g id="messages">%d</xliff:g> messages in one conversation</item>
        <item quantity="other"><xliff:g id="messages">%d</xliff:g> messages in <xliff:g id="conversations">%d</xliff:g> conversations</item>
    </plurals>
    <string name="notification_download_failures_line1_singular">Message not downloaded</string>
    <string name="notification_download_failures_line1_plural">Some messages not downloaded in Messaging</string>
    <plurals name="notification_download_failures">
        <item quantity="one"><xliff:g id="messages">%d</xliff:g> messages in one conversation</item>
        <item quantity="other"><xliff:g id="messages">%d</xliff:g> messages in <xliff:g id="conversations">%d</xliff:g> conversations</item>
    </plurals>
    <string name="notification_emergency_send_failure_line1">Message to <xliff:g id="number">%1$s</xliff:g> not sent</string>
    <string name="notification_emergency_send_failure_line2">
        Please make a voice call to emergency services. Your text message to
        <xliff:g id="number">%1$s</xliff:g> could not be delivered at this time.
    </string>
    <plurals name="notification_new_messages">
        <item quantity="one">New message</item>
        <item quantity="other"><xliff:g id="messages">%d</xliff:g> new messages</item>
    </plurals>
    <string name="start_conversation">Start</string>
    <string name="camera_error_opening">Camera not available</string>
    <string name="camera_error_unknown">Camera not available</string>
    <string name="camera_error_video_init_fail">Video capture not available</string>
    <string name="camera_error_storage_fail">Can\'t save media</string>
    <string name="camera_error_failure_taking_picture">Can\'t take picture</string>
    <string name="back">Back</string>
    <string name="action_menu_show_archived">Archived</string>
    <string name="action_delete">Delete</string>
    <string name="action_archive">Archive</string>
    <string name="action_unarchive">Unarchive</string>
    <string name="action_notification_off">Turn off notifications</string>
    <string name="action_notification_on">Turn on notifications</string>
    <string name="action_add_contact">Add contact</string>
    <string name="action_download">Download</string>
    <string name="action_send">Send</string>
    <string name="action_delete_message">Delete</string>
    <string name="camera_switch_to_video_mode">Capture video</string>
    <string name="camera_take_picture">Take picture</string>
    <string name="camera_switch_full_screen">Switch to full screen camera</string>
    <string name="camera_switch_camera_facing">Switch between front and back camera</string>
    <string name="camera_cancel_recording">Stop recording video</string>
    <string name="message_context_menu_copy_text">Copy text</string>
    <string name="message_context_menu_view_details">View details</string>
    <string name="message_context_menu_forward_message">Forward</string>
    <string name="chips_text_delete_button_content_description">Delete text</string>
    <string name="numeric_text_keyboard_toggle_button_content_description">Switch between entering text and numbers</string>
    <string name="add_more_participants_button_content_description">Add more participants</string>
    <string name="confrim_participants_button_content_description">Confirm participants</string>
    <string name="start_new_conversation">Start new conversation</string>
    <string name="action_debug_options">Debug</string>
    <string name="action_block">Block</string>
    <string name="blocked_contacts_title">Blocked contacts</string>
    <string name="apn_edit">Edit access point</string>
    <string name="apn_name">Name</string>
    <string name="apn_mmsc">MMSC</string>
    <string name="apn_mms_proxy">MMS proxy</string>
    <string name="apn_mms_port">MMS port</string>
    <string name="apn_mcc">MCC</string>
    <string name="apn_mnc">MNC</string>
</resources>