<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2015 The Android Open Source Project

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/permission_check_activity_background"
    android:orientation="vertical" >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/required_permissions_promo"
        android:paddingTop="96dp"
        style="@style/PromoScreenTextStyle.CenterAligned" />
    <TextView
        android:id="@+id/enable_permission_procedure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/enable_permission_procedure"
        android:contentDescription="@string/enable_permission_procedure_description"
        style="@style/PromoScreenTextStyle.CenterAligned"
        android:visibility="invisible"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="40dp"
        android:src="@drawable/permissions"
        android:scaleType="centerInside"
        android:importantForAccessibility="no" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/white" />
    <!-- Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/exit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/exit"
            style="@style/PromoScreenButtonStyle" />
        <TextView
            android:id="@+id/next"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/next_with_arrow"
            android:contentDescription="@string/next"
            style="@style/PromoScreenButtonStyle" />
        <TextView
            android:id="@+id/settings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/settings_with_arrow"
            android:contentDescription="@string/settings"
            style="@style/PromoScreenButtonStyle"
            android:visibility="gone"/>
        </LinearLayout>
</LinearLayout>
